--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,4 +10,4 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: https://github.com/sirajrkhan/git-action@v1.0.3
+      - uses: sirajrkhan/git-action@v1.0.3
